experimental/ir/testdata/extend/skip_wrong_kind.proto.stderr.txt
error: expected message type, found enum value `test.M.P.N`
  --> testdata/extend/skip_wrong_kind.proto:25:16
   |
24 |         enum X { N = 1; }
   |                  - defined here
25 |         extend N {  // Does not skip .test.M.P.N
   |                ^ expected message type

error: expected message type, found enum type `test.M.Q.N`
  --> testdata/extend/skip_wrong_kind.proto:32:16
   |
31 |         enum N { Q = 1; }
   |              - defined here
32 |         extend N {  // Does not skip .test.M.Q.N
   |                ^ expected message type

encountered 2 errors
